# MCprep

./: .gitattributes  .gitignore  BlenderChanges.md  CONTRIBUTING.md  LICENSE  LICENSE-3RD-PARTY.txt  LICENSE.txt  MCprep.py  README.md  bpy-build.yaml  compile.bat  compile.sh  create_release.sh  dev.py  mcprep-build.py  mcprep_data_base.json  mcprep_data_refresh.py  push_latest.sh  pyproject.toml  requirements.txt  run_tests.bat  run_tests.py  run_tests.sh
.github/ISSUE_TEMPLATE/: Asset-Submission.yaml  Bug-Report.yml  Feature-Request.yml  User-Acceptance-Testing.yml
.github/workflows/: run_tests.yaml
MCprep_addon/: README.md  __init__.py  _blender_manifest.toml  addon_updater.py  addon_updater_ops.py  commonmcobj_parser.py  conf.py  install_readme.txt  load_modules.py  material_generation.py  materials.py  mcprep_ui.py  meshswap.py  optimize_scene.py  privacy-policy.txt  reload.py  sky_drivers.py  spawner.py  tracking.py  translate_enum.py  util.py  util_operators.py  vivy_editor.py  vivy_ui.py  world_tools.py
MCprep_addon/MCprep_resources/: __init__.py  (+5 more)
action-scripts/: debug-build.py  default.py  dev.py  enable-vivy-system.py  extension.py  translate.py
docs/: asset_standards.md  common_errors.md  day-night-cycle.typ  dev_utils.md  implementation.md  quadratic-deriver.py  translating.md  vivy_json_spec.md
rc-files/: HOW_TO_BUILD.md  download_resources.sh
test_files/: addon_test.py  addon_tests.py  asset_qa_test.py  materials_test.py  mcmodel_test.py  mtl_atlas_modified.mtl  spawner_test.py  test_runner.py  tracker_test.py  util_test.py  world_tools_test.py
(+66 files in other folders)
