[tool.poetry]
name = "MCprep"
version = "3.5"
description = "Blender python addon to increase workflow for creating minecraft renders and animations"
authors = ["TheDuckCow"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fake-bpy-module-2-80 = "^20230117"
flake8 = "^5.0.4"
bpy-addon-build = ">=0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
